--- a/about.html
+++ b/about.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CapVibe - About Us</title>
+    <meta
+      name="description"
+      content="Learn about CapVibe's mission to create authentic streetwear hats for Gen Z. Discover our story and commitment to street culture and individual expression."
+    />
+    <meta
+      name="keywords"
+      content="street style hats, Gen Z fashion brand, streetwear company, authentic headwear, fashion culture, urban style accessories, colorful hats, trendy caps, youth fashion, streetwear hats"
+    />
+    <title>About CapVibe - Leading Gen Z Hat Brand | Our Story</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&family=Inter:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
