--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Shop trendy and stylish hats for Gen Z. Discover our exclusive collection of streetwear caps, beanies, and bucket hats. Free shipping worldwide."
+    />
+    <meta
+      name="keywords"
+      content="Gen Z hats, streetwear caps, trendy headwear, fashion caps, urban style hats, street fashion, youth fashion accessories, trendy beanies"
+    />
+    <title>
+      CapVibe - Premium Streetwear Hats for Gen Z | Shop Trendy Caps
+    </title>
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&family=Inter:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <title>CapVibe - Gen Z Hat Collection</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
